Prepare for deployment

--- a/src/components/extra/styles/featureReminder.css
+++ b/src/components/extra/styles/featureReminder.css
@@ -4,8 +4,8 @@
     right: 1rem;
     padding: 1rem;
     max-width: 350px;
-    background-color: #2e778d;
-    color: white;
+    background-color: #d8f2fa;
+    color: rgb(22, 21, 21);
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
