--- a/src/components/member/styles/membersView.css
+++ b/src/components/member/styles/membersView.css
@@ -2,7 +2,7 @@
 
 /* Main Container */
 .members-view-container {
-  max-width: 900px;
+  width: 100%;
   margin: 30px auto;
   padding: 5px;
   background-color: #ffffff;
