--- a/src/components/styles/MembersPage.css
+++ b/src/components/styles/MembersPage.css
@@ -1,7 +1,7 @@
 /* MembersPage.css */
 
 .members-container {
-    max-width: 800px;
+    width: 100%;
     margin: 20px auto;
     padding: 10px;
     background-color: #f9f9f9;
